modificamos el titulo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="with=device-with, initial-scale=1, maximum-scale=1">
-	<title>Powermax</title>
+	<title>PowermaxXXXXXXX</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 
